# persian-llm-eval

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_DATASET.md  DEPLOYMENT_FA.md  LICENSE  PROJECT_STATUS_FA.md  README.md  RUN_ME.command  START_HERE_FA.md  SUBMISSION.md  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
configs/: baselines.yml
data/: README.md  persian_eval_v1.hard.jsonl  persian_eval_v1.public_eval.jsonl
data/hidden/: README.md
docs/: BENCHMARK_REPORT.md  CODEX_BENCHMARK_PROMPT.md  REVIEW_PROPOSALS.md
hf/dataset/: README.md  external_sources.yml  persian_eval_v1.dev.jsonl
hf/space/: README.md  leaderboard.csv  leaderboard.json
leaderboard/: README.md  index.html  leaderboard.csv  leaderboard.json
persian_eval/: __init__.py  backends.py  cli.py  dataset.py  leaderboard.py  normalize.py  results.py  runner.py  scoring.py
results/: claude-haiku-4-5.hard.json  claude-haiku-4-5.public_eval.json  claude-opus-4-7-thinking-high.hard.json  claude-opus-4-7-thinking-medium.hard.json  claude-opus-4-7-thinking.hard.json  claude-opus-4-7.hard.json  claude-opus-4-7.public_eval.json  claude-sonnet-4-6.hard.json  claude-sonnet-4-6.public_eval.json  deepseek_r1_distill_llama_8b_hard.json  gpt-5-mini.hard.json  gpt-5-mini.public_eval.json  gpt-5-nano.hard.json  gpt-5-nano.public_eval.json  gpt-5-thinking-medium.hard.json  gpt-5-thinking-medium.public_eval.json  gpt-5.5-thinking-high.hard.json  gpt-5.5-thinking-high.public_eval.json  gpt-5.5-thinking-medium.hard.json  gpt-5.5-thinking-medium.public_eval.json  gpt-5.5.hard.json  gpt-5.5.public_eval.json  gpt-5.hard.json  gpt-5.public_eval.json  gpt_5_4_high_hard.json  gpt_5_5_high_hard.json  mistral_small_24b_2501_bnb_4bit_hard.json  qwen2_5_72b_instruct_bnb_4bit_hard.json  qwen3_30b_a3b_instruct_2507_hard.json  qwen3_8b_fast.json
results/legacy/: README.md  deepseek_r1_distill_qwen_14b_4bit_hard.json  gpt_5_4_mini_high_hard.json  llama3_3_70b_instruct_bnb_4bit_hard.json  qwen2_5_0_5b_fast.json  qwen3_14b_4bit_hard.json  qwen3_8b_hard.json  smoke-claude-haiku.json
scripts/: apply_review_decisions.py  build_charts.py  build_leaderboard.sh  build_static_leaderboard.py  build_v1_1_items.py  check_all.sh  prepare_hf_dataset.sh  prepare_hf_space.sh  publish_github.sh  review_pending_items.py  run_deepseek_r1_distill_8b_hard.sh  run_deepseek_r1_distill_qwen_14b_4bit_hard.sh  run_demo.sh  run_openai_reference.sh  run_qwen3_14b_4bit_hard.sh  run_qwen3_8b_hard.sh  summarise_review_proposals.py  validate_dataset.py
spaces/leaderboard/: app.py  leaderboard.csv  leaderboard.json  requirements.txt
tests/: test_backends.py  test_dataset.py  test_leaderboard.py  test_scoring.py
