[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persian-llm-eval"
version = "0.1.0"
description = "A practical benchmark runner and leaderboard scaffold for Iranian Persian LLM evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Persian LLM Eval contributors"}
]
keywords = ["persian", "farsi", "llm", "benchmark", "evaluation"]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
hf = ["torch>=2", "transformers>=4.51,<6", "accelerate>=0.26", "bitsandbytes>=0.43,<0.49"]
space = ["gradio>=4", "pandas>=2"]
viz = ["matplotlib>=3.7", "numpy>=1.24"]

[project.scripts]
persian-eval = "persian_eval.cli:main"

[tool.setuptools.packages.find]
include = ["persian_eval*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data", "results", "leaderboard", "spaces", "hf", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "SIM", "PL"]
ignore = [
  "RUF001",   # ambiguous unicode is expected in Persian prompts, labels, and normalizers.
  "PLR0913",  # too-many-arguments: common in CLI and runner signatures.
  "PLR2004",  # magic-value: frequent in scoring thresholds and tests.
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]
"scripts/*" = ["E402", "T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
  "scripts/",
  "spaces/",
  "hf/",
  "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
